--- a/index.html
+++ b/index.html
@@ -353,20 +353,7 @@
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
-    <script src="node_modules/@glidejs/glide/dist/glide.min.js"></script>
+    <script src="dist/app.js"></script>
 
-    <script>
-
-        let glide = new Glide('.glide', {
-            type: 'carousel',
-            startAt: 0,
-            perView: 5,
-            autoplay: 1500,
-        })
-
-        glide.mount()
-
-    </script>
-    
 </body>
 </html>
