--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         FAST . PROACTIVE . ENTHUSIAST 
                     </div>
                     <div class="desc -traits">
-                        NEIL is an active front end developer, He continously doing research and studies to improve his skills and workflow. He's also a very collaborative player of a team and always listen for suggestions to get things done in time. He loves being involved in any community that has shown his interests and knowledge.
+                        I'm an active front end developer, who constantly doing research and studies to improve my skills and workflow. I collaborate and contribute my best of knowledge in every project. I love being involved in any community that has shown my interests and knowledge.
                     </div>
                 </div>
             </div>
@@ -492,9 +492,9 @@
                         </div>
                     </div>
 
-                    <a href="https://honda-80282.web.app/" target="_blank" class="main-btn -modal_request">
+                    <!-- <a href="https://honda-80282.web.app/" target="_blank" class="main-btn -modal_request">
                         REQUEST A DEMO
-                    </a>
+                    </a> -->
 
                     <div class="features">
                         <div class="head">
@@ -566,7 +566,7 @@
                             CORE FEATURES:
                         </div>
                         <ul>
-                            <li>DYNAMIC CUSTOM POST TYPE FOR EVENTS AND CLEINTS</li>
+                            <li>DYNAMIC CUSTOM POST TYPE FOR EVENTS AND CLIENTS</li>
                             <li>SHORTCODE FOR EVENTS AND CLIENTS</li>
                             <li></li>
                         </ul>
@@ -635,6 +635,7 @@
                             LANGUAGE & TOOLS
                         </div>
                         <ul>
+                            <li>MONGO, EXPRESS, NODEJS(BACKEND)</li>
                             <li>ZURB FOUNDATION</li>
                             <li>CSS3</li>
                             <li>JQUERY</li>
