--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="main-nav">
             <div class="main-container -nav">
                 <div class="main-logo">
-                    <a href="#"><img class="logo" src="images/logo.png" alt=""></a>
+                    <a href="/"><img class="logo" src="images/logo.png" alt=""></a>
                 </div>
                 <ul class="nav-list">
                     <li class="item"><a href="#contact">CONTACT</a></li>
@@ -31,7 +31,9 @@
                 <div class="desc -intro">
                     AND I CREATE WEBSITES FOR A LIVING
                 </div>
-                <img class="thumbnail" src="images/boy.png" alt="">
+                <div class="profile" >
+                    <a href="#traits"><img class="thumbnail" src="images/profile.jpeg" alt=""></a>
+                </div>
                 <div class="caretWrapper">
                     <a href="#traits"><img class="animDown" src="images/chev-down.png" alt=""></a>
                 </div>
