update profile and header design

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="main-nav">
             <div class="main-container -nav">
                 <div class="main-logo">
-                    <a href="/"><img class="logo" src="images/logo.png" alt=""></a>
+                    <a href="/"><img class="logo" src="images/neil_white.png" alt=""></a>
                 </div>
                 <ul class="nav-list">
                     <li class="item"><a href="#contact">CONTACT</a></li>
@@ -25,19 +25,17 @@
 
         <div class="main-body">
             <div class="main-container -intro">
+                <a href="#traits" class="thumbnail"><img src="images/profile2.png" alt=""></a>
                 <div class="head -intro">
-                    Hi! I'm NEIL RESNERA.
+                    NEIL RESNERA
                 </div>
                 <div class="desc -intro">
-                    AND I CREATE WEBSITES FOR A LIVING
-                </div>
-                <div class="profile" >
-                    <a href="#traits"><img class="thumbnail" src="images/profile.jpeg" alt=""></a>
+                    FRONT-END | UI/UX DEVELOPER
                 </div>
                 <div class="caretWrapper">
                     <a href="#traits"><img class="animDown" src="images/chev-down.png" alt=""></a>
                 </div>
-                <img class="hero" src="images/hero.png" alt="">
+                <!-- <img class="hero" src="images/hero.png" alt=""> -->
             </div>
 
             <div class="fluid-container -traits" id="traits">
