fix skills slider

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                     WEBSITE
                                 </div>
                                 <div class="tools">
-                                    ZURB FOUNDATION | CSS3 | JQUERY
+                                    FOUNDATION | CSS3 | JQUERY
                                 </div>
                                 <a class="cards-btn">VIEW PROJECT</a>
                             </div>
