--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <div class="tools">
                                     WORDPRESS | SASS
                                 </div>
-                                <a class="cards-btn">VIEW PROJECT</a>
+                                <a class="cards-btn">PREVIEW</a>
                             </div>
                         </div>
                         <div class="card" id="regapp">
@@ -80,7 +80,7 @@
                                 <div class="tools">
                                     REACT NATIVE | FIREBASE API
                                 </div>
-                                <a class="cards-btn">VIEW PROJECT</a>
+                                <a class="cards-btn">PREVIEW</a>
                             </div>
                         </div>
                         <div class="card" id="dashboard">
@@ -94,7 +94,7 @@
                                 <div class="tools">
                                     REACT | FIREBASE API | SASS
                                 </div>
-                                <a class="cards-btn">VIEW PROJECT</a>
+                                <a class="cards-btn">PREVIEW</a>
                             </div>
                         </div>
                         <div class="card" id="checkout">
@@ -108,7 +108,7 @@
                                 <div class="tools">
                                     HTML | SASS | PHP - LARAVEL
                                 </div>
-                                <a class="cards-btn">VIEW PROJECT</a>
+                                <a class="cards-btn">PREVIEW</a>
                             </div>
                         </div>
                         <div class="card" id="cms">
@@ -122,7 +122,7 @@
                                 <div class="tools">
                                     FOUNDATION | CSS3 | JQUERY
                                 </div>
-                                <a class="cards-btn">VIEW PROJECT</a>
+                                <a class="cards-btn">PREVIEW</a>
                             </div>
                         </div>
                         <div class="card" id="bright">
@@ -136,7 +136,7 @@
                                 <div class="tools">
                                     HTML | SASS | PHP - LARAVEL
                                 </div>
-                                <a class="cards-btn">VIEW PROJECT</a>
+                                <a class="cards-btn">PREVIEW</a>
                             </div>
                         </div>
                     </div>
