--- a/index.html
+++ b/index.html
@@ -111,6 +111,20 @@
                                 <a class="cards-btn">PREVIEW</a>
                             </div>
                         </div>
+                        <div class="card" id="sa">
+                            <div class="content">
+                                <div class="title">
+                                    SEARCHADMINISTRATOR
+                                </div>
+                                <div class="type">
+                                    WEBSITE
+                                </div>
+                                <div class="tools">
+                                    REACT | LARAVEL | SASS
+                                </div>
+                                <a class="cards-btn">PREVIEW</a>
+                            </div>
+                        </div>
                         <div class="card" id="cms">
                             <div class="content">
                                 <div class="title">
@@ -125,20 +139,7 @@
                                 <a class="cards-btn">PREVIEW</a>
                             </div>
                         </div>
-                        <div class="card" id="bright">
-                            <div class="content">
-                                <div class="title">
-                                    BRIGHT PARTNER
-                                </div>
-                                <div class="type">
-                                    WEBSITE
-                                </div>
-                                <div class="tools">
-                                    HTML | SASS | PHP - LARAVEL
-                                </div>
-                                <a class="cards-btn">PREVIEW</a>
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -683,6 +684,51 @@
                         <ul>
                             <li>LARAVEL</li>
                             <li>HTML</li>
+                            <li>SASS</li>
+                        </ul>
+                    </div>
+
+                </div>
+                
+            </div>
+        </div>
+
+         <!-- BRIGHT -->
+         <div class="modal modal-wrapper" id="sa">
+            <div class="modal-header">
+                <img class="close" src="images/close.png" alt="">
+                <div class="head">
+                    SEARCH ADMINISTRATOR
+                </div>
+                <div class="desc">
+                    A Single Page Application(SPA) Website for Search Administrator Website
+                </div>
+                <div class="tech">
+                    <ul>
+                        <li>LARAVEL</li>
+                        <li>HTML</li>
+                        <li>SASS</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="modal-container">
+                <div class="modal-content">
+                    <div class="gallery">
+
+                        <div class="image">
+                            <img src="images/modal/SA/home.png" alt="" loading=lazy>
+                        </div>
+                    </div>
+                    <a href="https://www.searchadministrator.com/" target="_blank" class="main-btn -modal">
+                        DEMO
+                    </a>
+                    <div class="features">
+                        <div class="head">
+                            LANGUAGE & TOOLS
+                        </div>
+                        <ul>
+                            <li>LARAVEL</li>
+                            <li>REACT</li>
                             <li>SASS</li>
                         </ul>
                     </div>
