update SA subhead

--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
                     SEARCH ADMINISTRATOR
                 </div>
                 <div class="desc">
-                    A Single Page Application(SPA) Website for Search Administrator Website
+                    A Single Page Application(SPA) Website for Search Administrator Chrome Extennsion
                 </div>
                 <div class="tech">
                     <ul>
