change submit button

--- a/index.html
+++ b/index.html
@@ -315,9 +315,7 @@
                             <div class="form-control">
                                <div class="recaptcha" data-netlif-recaptcha="true"></div>
                             </div>
-                            <a href="#" class="main-btn" id="form-submit">
-                                SEND
-                            </a>
+                            <input href="#" type="submit"  class="main-btn" id="form-submit" value="SEND">
                         </form>
     
                         <div class="details-wrapper">
