--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                 </div>
                             </div>
                             <div class="form-control">
-                               <div class="recaptcha" data-netlif-recaptcha="true"></div>
+                               <div class="recaptcha" data-netlify-recaptcha="true"></div>
                             </div>
                             <input href="#" type="submit"  class="main-btn" id="form-submit" value="SEND">
                         </form>
