add feature on interactive display modal

--- a/index.html
+++ b/index.html
@@ -628,6 +628,7 @@
                             <li>User Authentication</li>
                             <li>MANAGE POSTS</li>
                             <li>MANAGE STUDIES</li>
+                            <li>DATA ANALYTICS DASHBOARD</li>
                             <li>Pagination</li>
                         </ul>
                     </div>
