--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     NEIL RESNERA
                 </div>
                 <div class="desc -intro">
-                    FRONT-END | UI/UX DEVELOPER
+                    SELFT TAUGHT FRONT-END | UI/UX DEVELOPER
                 </div>
                 <div class="caretWrapper">
                     <a href="#traits"><img class="animDown" src="images/chev-down.png" alt=""></a>
@@ -41,7 +41,7 @@
             <div class="fluid-container -traits" id="traits">
                 <div class="main-container -traits">
                     <div class="head -traits">
-                        FAST . PROACTIVE . ENTHUSIAST 
+                        FAST <span>&#183;</span> PROACTIVE <span>&#183;</span> ENTHUSIAST 
                     </div>
                     <div class="desc -traits">
                         I'm an active front end developer, who constantly doing research and studies to improve my skills and workflow. I collaborate and contribute my best of knowledge in every project. I love being involved in any community that has shown my interests and knowledge.
