--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     NEIL RESNERA
                 </div>
                 <div class="desc -intro">
-                    SELFT TAUGHT FRONT-END | UI/UX DEVELOPER
+                    SELF TAUGHT FRONT-END | UI/UX DEVELOPER
                 </div>
                 <div class="caretWrapper">
                     <a href="#traits"><img class="animDown" src="images/chev-down.png" alt=""></a>
