--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         FAST <span>&#183;</span> PROACTIVE <span>&#183;</span> ENTHUSIAST 
                     </div>
                     <div class="desc -traits">
-                        I constantly doing research and studies to improve my skills and workflow. I collaborate and contribute my experiences in every project. I love being involved in any community that has shown my interests and knowledge.
+                        I constantly doing <b>research and studies</b> to improve my skills and workflow. I collaborate and contribute my experiences in every project. I love being involved in any community that has shown my interests and knowledge.
                     </div>
                 </div>
             </div>
