--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     NEIL RESNERA
                 </div>
                 <div class="desc -intro">
-                    SELF TAUGHT FRONT-END | UI/UX DEVELOPER
+                    FRONT-END | UI/UX DEVELOPER
                 </div>
                 <div class="caretWrapper">
                     <a href="#traits"><img class="animDown" src="images/chev-down.png" alt=""></a>
@@ -44,7 +44,7 @@
                         FAST <span>&#183;</span> PROACTIVE <span>&#183;</span> ENTHUSIAST 
                     </div>
                     <div class="desc -traits">
-                        I constantly doing <b>research and studies</b> to improve my skills and workflow. I collaborate and contribute my experiences in every project. I love being involved in any community that has shown my interests and knowledge.
+                        I tend to spend time researching about architectural pattern as I'm curious on how can I improve my workflow, to deliver a given task in timely manner. As a Frontend Developer, My mantra is doing things in advance then reuse and improve it in any project. I love to be involved in any community that has shown my interests and knowledge.
                     </div>
                 </div>
             </div>
@@ -350,7 +350,7 @@
         </div>
 
         <div class="main-footer">
-            COPYRIGHT &COPY; 2020 NEIL RESNERA 
+            COPYRIGHT &COPY; 2022 NEIL RESNERA 
         </div>
 
 
