--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
         <div class="main-body">
             <div class="main-container -intro">
-                <a href="#traits" class="thumbnail"><img src="images/profile2.png" alt=""></a>
+                <a href="#traits" class="thumbnail"><img src="images/boy.png" alt=""></a>
                 <div class="head -intro">
                     NEIL RESNERA
                 </div>
                 <div class="desc -intro">
-                    FRONT-END | UI/UX DEVELOPER
+                    FRONTEND <span>&#183;</span> UI/UX
                 </div>
                 <div class="caretWrapper">
                     <a href="#traits"><img class="animDown" src="images/chev-down.png" alt=""></a>
@@ -44,7 +44,7 @@
                         FAST <span>&#183;</span> PROACTIVE <span>&#183;</span> ENTHUSIAST 
                     </div>
                     <div class="desc -traits">
-                        I tend to spend time researching about architectural pattern as I'm curious on how can I improve my workflow, to deliver a given task in timely manner. As a Frontend Developer, My mantra is doing things in advance then reuse and improve it in any project. I love to be involved in any community that has shown my interests and knowledge.
+                        I invest significant time in researching architectural patterns as part of my ongoing commitment to enhancing my workflow and delivering tasks promptly. My guiding principle involves proactively addressing challenges, allowing for the reuse and refinement of solutions across various projects. I actively engage in communities aligned with my interests and expertise to contribute and stay abreast of developments in my field.
                     </div>
                 </div>
             </div>
